<resources>
    <string name="app_name">Job Applier</string>
    <string name="browser">Browser</string>
    <string name="pdf_c_v_file">.PDF C.V. File</string>
    <string name="password_for_gmail">Password for gmail</string>
    <string name="email_e_g_bobsmith_gmail_com">Email e.g. bobsmith@gmail.com</string>
    <string name="cell_phone_number_e_g_0821230000">Cell Phone Number e.g. 0821230000</string>
    <string name="last_name_e_g_smith">Last Name e.g. Smith</string>
    <string name="first_name_e_g_bob">First Name e.g. Bob</string>
    <string name="job_title_e_g_cashier">Job Title e.g. Cashier</string>
    <string name="action_rate">Rate</string>
    <string-array name="location_array">
        <item>CHOOSE A LOCATION</item>
        <item>BALLITO</item>
        <item>BARBERTON</item>
        <item>BELA BELA</item>
        <item>BLOEMFONTEIN</item>
        <item>BLOUBERG</item>
        <item>BO KAROO</item>
        <item>BOLAND</item>
        <item>BRITS</item>
        <item>CAPE TOWN</item>
        <item>CAPRICORN</item>
        <item>DELMAS</item>
        <item>DRAKENSBERG</item>
        <item>DURBAN</item>
        <item>EAST LONDON</item>
        <item>EMALAHLENI</item>
        <item>EMPANGENI</item>
        <item>ERMELO</item>
        <item>FRONTIER COUNTRY</item>
        <item>GARDEN ROUTE</item>
        <item>GRAHAMSTOWN</item>
        <item>HARTBEESPOORT</item>
        <item>JEFFREYS BAY</item>
        <item>JOHANNESBURG</item>
        <item>KALAHARI</item>
        <item>KAROO HARTLAND</item>
        <item>KIMBERLEY</item>
        <item>KLERKSDORP</item>
        <item>KROONSTAD</item>
        <item>LEPHALALE</item>
        <item>LICHTENBURG</item>
        <item>MAFIKENG</item>
        <item>MIDDELBURG</item>
        <item>MOKOPANE</item>
        <item>MTHATHA</item>
        <item>NAMAQUALAND</item>
        <item>NATAL MIDLANDS</item>
        <item>NELSPRUIT</item>
        <item>NORTH COAST</item>
        <item>OLIFANTSRIVER</item>
        <item>OVERBERG</item>
        <item>PARYS</item>
        <item>PIETERMARITZBURG</item>
        <item>POLOKWANE</item>
        <item>PORT ELIZABETH</item>
        <item>POTCHEFSTROOM</item>
        <item>PRETORIA</item>
        <item>RICHARDS BAY</item>
        <item>RUSTENBURG</item>
        <item>SASOLBURG</item>
        <item>SECUNDA</item>
        <item>SOUTH COAST</item>
        <item>SOUTPANSBERG</item>
        <item>STANDERTON</item>
        <item>STANGER</item>
        <item>SUNSHINE COAST</item>
        <item>TZANEEN</item>
        <item>UITENHAGE</item>
        <item>UPINGTON</item>
        <item>VALLEY OF THE OLIFANTS</item>
        <item>VIRGINIA</item>
        <item>VRYBURG</item>
        <item>WATERBERG</item>
        <item>WELKOM</item>
        <item>WEST COAST</item>
        <item>WHITE RIVER</item>
        <item>WILD COAST</item>
        <item>WORCESTER</item>
        <item>ZULULAND</item>
    </string-array>
    <!--test-->
    <!--<string name="admob_jobapplier_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--<string name="admob_jobapplier_reward_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>-->
    <!--<string name="admob_jobapplier_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--prod-->
    <string name="admob_jobapplier_app_id">ca-app-pub-5648056385123299~3257896267</string>
    <string name="admob_jobapplier_reward_ad_unit_id">ca-app-pub-5648056385123299/9226153212</string>
    <string name="admob_jobapplier_banner_ad_unit_id">ca-app-pub-5648056385123299/1954167852</string>
</resources>
